RESOLVED FIXED42503
Open streams should not keep a plug-in view alive
https://bugs.webkit.org/show_bug.cgi?id=42503
Summary Open streams should not keep a plug-in view alive
Anders Carlsson
Reported 2010-07-17 13:05:56 PDT
Open streams should not keep a plug-in view alive
Attachments
Patch (5.43 KB, patch)
2010-07-17 13:09 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2010-07-17 13:09:30 PDT
Anders Carlsson
Comment 2 2010-07-28 16:36:20 PDT
Note You need to log in before you can comment on or make changes to this bug.